After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766558 - deinterlace: fix caps leak
deinterlace: fix caps leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-17 10:44 UTC by Guillaume Desmottes
Modified: 2016-05-25 08:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
deinterlace: fix caps leak (966 bytes, patch)
2016-05-17 10:46 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-17 10:44:33 UTC
.
Comment 1 Guillaume Desmottes 2016-05-17 10:46:40 UTC
Created attachment 328055 [details] [review]
deinterlace: fix caps leak

The caps returned by gst_pad_get_current_caps() was never unreffed when
not early returning.

Fix a leak with the elements/deinterlace test.
Comment 2 Sebastian Dröge (slomo) 2016-05-20 06:36:38 UTC
Attachment 328055 [details] pushed as 47a3587 - deinterlace: fix caps leak